--- a/src/main/resources/templates/items/item.html
+++ b/src/main/resources/templates/items/item.html
@@ -53,6 +53,12 @@
                     th:onclick="|location.href='@{/items}'|"
                     type="button" th:text="#{button.cancel}">목록으로</button>
         </div>
+        <div class="col">
+            <button class="w-100 btn btn-secondary btn-lg"
+                    onclick="location.href='items.html'"
+                    th:onclick="|location.href='@{/items/{itemId}/delete(itemId=${item.id})}'|"
+                    type="button" th:text="#{button.delete}">상품 삭제</button>
+        </div>
     </div>
 
 </div> <!-- /container -->
